tests/single_instruction_translation_validation/mcsema/memory-variants/xaddl_m32_r32/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:183:30: error: use of undefined value '@__remill_fetch_and_add_32'
  %10 = call %struct.Memory* @__remill_fetch_and_add_32(%struct.Memory* %0, i64 %2, i32* nonnull dereferenceable(4) %7) #24
                             ^
0.02user 0.01system 0:00.03elapsed 109%CPU (0avgtext+0avgdata 27084maxresident)k
0inputs+16outputs (0major+3237minor)pagefaults 0swaps
